# TC2004.1

./: .gitignore  GUI.cpp  README.md
Data_Persistency/: README.md  gui.cpp
Data_Persistency/OpenCVExample/: OpenCVExample.sln
Data_Persistency/OpenCVExample/OpenCVExample/: CMakeLists.txt  OpenCVExample.vcxproj  OpenCVExample.vcxproj.filters  PersistenceModule.cpp  PersistenceModule.hpp  PersistenceModuleBase.hpp  gui.cpp  main.cpp  (+1 more)
Face_Alignment/: CMakeLists.txt  README.md
Face_Alignment/src/: CMakeCache.txt  Makefile  cmake_install.cmake  facealignmentM2.cpp  facealignmentM2.hpp  mainface.cpp  my_project
Face_Detection/: CMakeLists.txt  README.md
Face_Detection/cascades/: cascades.txt
Face_Detection/src/: CMakeCache.txt  FaceDetector.cpp  FaceDetector.hpp  Makefile  cmake_install.cmake  main.cpp  my_project
Face_Recognition/: CMakeLists.txt  Elpatitofeo.yml  FaceRecognitionSystem.cpp  FaceRecognitionSystem.hpp  main.cpp
Face_Recognition/builld/: CMakeCache.txt  Makefile  cmake_install.cmake  my_project
Face_Recognition/source/: CMakeCache.txt  Makefile  cmake_install.cmake  my_project
Face_Recognition/src/: FaceRecognitionSystem.cpp  Makefile  my_project
FastSearch/: CMakeLists.txt  README.md  main.cpp  module.cpp  moduleFS.cpp  moduleFS.hpp
Feature_Extraction/: CMakeLists.txt  README.md
Feature_Extraction/source/: CMakeCache.txt  Makefile  cmake_install.cmake  main.cpp  moduleFE.cpp  moduleFE.hpp  my_project
Feature_Extraction/source/dlib_build/: Makefile
Feature_Extraction/source/dlib_build/test_for_libjpeg_build/: CMakeCache.txt  Makefile  cmake_install.cmake
Feature_Extraction/source/dlib_build/test_for_libpng_build/: CMakeCache.txt  Makefile  cmake_install.cmake
GUIElements/: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  GUI.cpp  GUI.hpp  algo.yml  main.cpp
Integration/: CMakeLists.txt  algo.py  main.cpp  module.cpp  moduleFS.cpp  moduleFS.hpp
Integration /: CMakeLists.txt  FaceRecognitionmSystem.cpp  README.md  main.cpp
PruebaMod/cascades/: cascades.txt
(+35 files in other folders)
